docs: group operations with tags
