# docs/docs/api/sidebar.js
@@ -1,1 +1,1 @@
-module.exports = [{"type":"doc","id":"api/camunda-platform-rest-api"},{"type":"category","label":"UNTAGGED","items":[{"type":"doc","id":"api/get-status","label":"Retrieve the Zeebe cluster status","className":"api-method get"},{"type":"doc","id":"api/create-process-instance","label":"Create a new Process Instance","className":"api-method post"},{"type":"doc","id":"api/activate-jobs","label":"Activate Jobs of a specific type","className":"api-method get"},{"type":"doc","id":"api/update-job","label":"Update a Job","className":"api-method patch"}]}];
+module.exports = [{"type":"doc","id":"api/camunda-platform-rest-api"},{"type":"category","label":"Cluster","link":{"type":"doc","id":"api/cluster"},"items":[{"type":"doc","id":"api/get-status","label":"Retrieve the Zeebe cluster status","className":"api-method get"}]},{"type":"category","label":"Process-Automation","link":{"type":"doc","id":"api/process-automation"},"items":[{"type":"doc","id":"api/create-process-instance","label":"Create a new Process Instance","className":"api-method post"},{"type":"doc","id":"api/activate-jobs","label":"Activate Jobs of a specific type","className":"api-method get"},{"type":"doc","id":"api/update-job","label":"Update a Job","className":"api-method patch"}]}];
